kustomize/gotify/oauth2-proxy-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gotify-oauth2-proxy-forwardauth # Middleware name
  namespace: gotify # Same namespace as oauth2-proxy service and Ingress
  labels:
    app.kubernetes.io/name: oauth2-proxy-forwardauth
    app.kubernetes.io/instance: oauth2-proxy-gotify-forwardauth
    app.kubernetes.io/part-of: gotify
    app.kubernetes.io/managed-by: flux
spec:
  forwardAuth:
    address: http://oauth2-proxy-gotify.gotify.svc.cluster.local:80 # Address of your oauth2-proxy service
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Authorization # If you want to pass the OIDC token to Gotify
