kustomize/gotify/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"gotify","namespace":"gotify"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gotify"}},"template":{"metadata":{"labels":{"app":"gotify"}},"spec":{"containers":[{"image":"gotify/server","name":"gotify","resources":{"limits":{"cpu":"1","memory":"1Gi"},"requests":{"cpu":"0.5","memory":"512Mi"}},"volumeMounts":[{"mountPath":"/app/data","name":"gotify-storage"}]},{"command":["sh","-c","sleep infinity"],"i [...]
    creationTimestamp: "2023-09-25T14:16:31Z"
    generation: 2
    name: gotify
    namespace: gotify
    resourceVersion: "23811537"
    uid: 592b5501-4787-47f2-a59a-73f237e0016d
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gotify
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: gotify
      spec:
        containers:
        - image: gotify/server
          imagePullPolicy: Always
          name: gotify
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/data
            name: gotify-storage
        - command:
          - sh
          - -c
          - sleep infinity
          image: busybox
          imagePullPolicy: Always
          name: plugins
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/data/plugins
            name: gotify-storage
            subPath: plugins
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: gotify-storage
          persistentVolumeClaim:
            claimName: gotify-storage
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-12-15T01:11:51Z"
      lastUpdateTime: "2024-12-15T01:11:51Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-09-25T14:16:31Z"
      lastUpdateTime: "2025-01-29T11:11:36Z"
      message: ReplicaSet "gotify-858cf48546" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
