kustomize/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gotify
  type: ClusterIP
