kustomize/gotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    description: "Gotify ingress"
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy-gotify.gotify.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://gotify.stillon.top/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User, X-Auth-Request-Email, Authorization"
  labels:
    app: gotify
    app.kubernetes.io/name: gotify
    app.kubernetes.io/instance: gotify
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: gotify
    app.kubernetes.io/managed-by: flux
  name: gotify
  namespace: gotify
spec:
  rules:
  - host: gotify.stillon.top
    http:
      paths:
      - backend:
          service:
            name: gotify
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gotify.stillon.top
    secretName: gotify.stillon.top-tls
